--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "description": "Un hello world con express",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "PilarTecno",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
